@@ -3,9 +3,10 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MOD 0.9.5 beta 4 (rev 1550 - September 28, 2006)
+MOD 0.9.5 beta 4 (rev 1552 - September 28, 2006)
 ====================================
 
+* Fixed default manager_theme selection when added new manager users. (1552)
 * Update AjaxSearch to most recent version. (1550)
 * Update to delete categories to check appropriate permissions & display correctly. (1550)
 * [FS#124] RegClientStartupScript and RegClientScript not always inserting code properly. (1550)
